@@ -266,6 +266,7 @@ escid	\\[^ \t\f\r\n]+
   "logic"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenNETTYPE; }
   "longint"		{ FL; VALTEXT; CALLBACK(keywordCb); return yINTEGER; }
   "modport"		{ FL; VALTEXT; CALLBACK(keywordCb); return yMODPORT; }
+  "priority"		{ FL; VALTEXT; CALLBACK(keywordCb); return yPRIORITY; }
   "property"		{ FL; VALTEXT; CALLBACK(keywordCb); return yPROPERTY; }
   "ref"			{ FL; VALTEXT; CALLBACK(keywordCb); return yREF; }
   "shortint"		{ FL; VALTEXT; CALLBACK(keywordCb); return yINTEGER; }
@@ -273,6 +274,7 @@ escid	\\[^ \t\f\r\n]+
   "static"		{ FL; VALTEXT; CALLBACK(keywordCb); return ySTATIC; }
   "string"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenNETTYPE; }
   "typedef"		{ FL; VALTEXT; CALLBACK(keywordCb); return yTYPEDEF; }
+  "unique"		{ FL; VALTEXT; CALLBACK(keywordCb); return yUNIQUE; }
   /*     Generic unsupported keywords */
   "alias"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "assume"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
@@ -310,7 +312,6 @@ escid	\\[^ \t\f\r\n]+
   "null"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "package"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "packed"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
-  "priority"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "program"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "protected"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "pure"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
@@ -330,7 +331,6 @@ escid	\\[^ \t\f\r\n]+
   "timeunit"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "type"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "union"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
-  "unique"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "var"			{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "virtual"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
   "void"		{ FL; VALTEXT; CALLBACK(keywordCb); return ygenKEYWORD; }
