@@ -251,6 +251,9 @@ verilog/parser_bugs.v:254: PORT  'name'
 verilog/parser_bugs.v:256: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:257: MODULE  'module' 'bugvp10' undef '0'
 verilog/parser_bugs.v:278: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:279: MODULE  'module' 'bugvp33' undef '0'
+verilog/parser_bugs.v:280: SIGNAL_DECL  'integer' 'i' '' '' '' ''
+verilog/parser_bugs.v:288: ENDMODULE  'endmodule'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: SIGNAL_DECL  'wire' 'b_i' '' '' '' ''
 verilog/pinorder.v:008: SIGNAL_DECL  'wire' 'd_o' '' '' '' ''
