@@ -276,3 +276,13 @@ module bugvp10;
       --x;
    end
 endmodule
+module bugvp33;
+   integer i;
+   initial begin
+      unique case (i)
+      endcase
+      priority case (i)
+      endcase
+      if (i) begin end else begin end
+   end
+endmodule
